--- a/app/src/main/res/layout/list_item_zodiac.xml
+++ b/app/src/main/res/layout/list_item_zodiac.xml
@@ -10,12 +10,16 @@
         android:id="@+id/zodiac_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Zodiac Name"
         android:fontFamily="@font/chaparral"
+        android:gravity="center"
+        android:textSize="40sp"
+        android:textColor="#5dbdc2"
+        android:text="Zodiac Name"
         android:textAppearance="?attr/textAppearanceHeadline6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
